# saorsa-canvas

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE.md
.config/: hakari.toml
.github/workflows/: ci.yml  release.yml
.planning/: ISSUES.md  PLAN-3.1.md  PLAN-3.2.md  PLAN-3.md  PLAN-4.1.md  PLAN-4.2.md  PLAN-4.md  ROADMAP.md  STATE.json  STATE.md
.planning/archive/: PLAN-2.md
.planning/plans/: PLAN-1.md  PLAN-2.md  PLAN-3.md  PLAN-4.md  PLAN-5.md  PLAN-6.md  PLAN-7.md  PLAN-8.md
.planning/reviews/: phases-1-3-review-20260121T224600.md
canvas-app/: Cargo.toml  README.md
canvas-app/src/: lib.rs
canvas-core/: Cargo.toml  README.md
canvas-core/src/: a2ui.rs  element.rs  error.rs  event.rs  fusion.rs  lib.rs  offline.rs  scene.rs  schema.rs  state.rs  store.rs  wasm.rs
canvas-core/tests/: voice_integration.rs
canvas-desktop/: Cargo.toml  README.md
canvas-desktop/src/: app.rs  communitas.rs  lib.rs  main.rs
canvas-mcp/: Cargo.toml  README.md
canvas-mcp/src/: lib.rs  resources.rs  server.rs  tools.rs
canvas-renderer/: Cargo.toml  README.md
canvas-renderer/src/: chart.rs  error.rs  export.rs  holographic.rs  image.rs  lib.rs  quilt.rs  spatial.rs  texture_cache.rs  video.rs
canvas-renderer/src/backend/: canvas2d.rs  mod.rs  wgpu.rs
canvas-renderer/src/shaders/: quad.wgsl  textured.wgsl
canvas-renderer/tests/: export_integration.rs  holographic.rs
canvas-server/: Cargo.toml  README.md
canvas-server/src/: agui.rs  communitas.rs  health.rs  lib.rs  main.rs  metrics.rs  routes.rs  sync.rs  validation.rs
canvas-server/tests/: agui_integration.rs  export_integration.rs  persistence_integration.rs  sync_broadcast.rs  sync_integration.rs  websocket_integration.rs  websocket_sync_tests.rs
canvas-server/tests/common/: mod.rs  server.rs
canvas-server/web/: manifest.json  sw.js
canvas-skill/: INSTALL.md  SKILL.md
docs/: A2UI.md  API.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  SEMANTICS_PLAN.md  SPECS.md  VISION.md
docs/gsd/: ISSUES.md  README.md  ROADMAP.md  STATE.json  STATE.md
docs/gsd/archive/: PLAN-1-complete.md
docs/gsd/plans/: PLAN-2.1.md  PLAN-2.2.md  PLAN-2.3.md  PLAN-2.4.md  PLAN-3.3.md  PLAN-4.3.md  PLAN-M2P1.md  PLAN-M3-P1.md
scripts/: bundle-release.sh  install.sh  uninstall.sh
scripts/linux/: saorsa-canvas.service  setup-daemon.sh
scripts/macos/: com.saorsa.canvas.plist  setup-daemon.sh
web/: canvas-renderer.js  index.html  looking-glass.js  signaling.js  sw.js  video.js  voice.js
workspace-hack/: Cargo.toml
