[workspace]
resolver = "2"
members = [
    "canvas-core",
    "canvas-renderer",
    "canvas-server",
    "canvas-mcp",
    "canvas-app",
    "canvas-desktop",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Saorsa Labs <dev@saorsa.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/saorsa-labs/saorsa-canvas"
homepage = "https://saorsa.ai"
description = "AI-native visual interface layer for Claude Code"
keywords = ["canvas", "ai", "mcp", "claude", "visualization"]
categories = ["visualization", "gui", "development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Web server
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "request-id"] }

# Graphics (wgpu)
wgpu = "24"
winit = "0.30"
raw-window-handle = "0.6"

# WASM support
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "GpuDevice",
    "Touch",
    "TouchEvent",
    "TouchList",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

# WebRTC (use saorsa-webrtc when available)
# saorsa-webrtc = { path = "../saorsa-webrtc" }

# Charts
plotters = "0.3"
plotters-canvas = "0.3"

# Image processing
image = "0.25"

# 3D models (glTF)
gltf = "1.4"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Base64 for binary encoding
base64 = "0.22"

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # Optimize for size (important for WASM)
strip = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"
