[package]
name = "canvas-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "WASM application for Saorsa Canvas - combines core and renderer for web deployment."

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = []

[dependencies]
# Core canvas types and renderer
canvas-core = { path = "../canvas-core" }
canvas-renderer = { path = "../canvas-renderer", default-features = false, features = ["gpu", "wasm"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# WASM
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "TouchEvent",
    "TouchList",
    "Touch",
    "MouseEvent",
    "KeyboardEvent",
    "Event",
    "EventTarget",
    "Performance",
    "console",
] }
js-sys.workspace = true
console_error_panic_hook.workspace = true

# Error handling
thiserror.workspace = true

# UUID - needs js feature for WASM
uuid = { workspace = true, features = ["js"] }
