[package]
name = "canvas-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "WASM application for Saorsa Canvas - combines core and renderer for web deployment."

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = []

[dependencies]
# Core canvas types and renderer
# Enable wasm feature for proper UUID generation in browser (uses crypto.getRandomValues)
canvas-core = { path = "../canvas-core", features = ["wasm"] }
# Note: charts and images features disabled for WASM (plotters/image crates don't support wasm32)
canvas-renderer = { path = "../canvas-renderer", default-features = false, features = ["wasm"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# WASM
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "TouchEvent",
    "TouchList",
    "Touch",
    "MouseEvent",
    "KeyboardEvent",
    "Event",
    "EventTarget",
    "Performance",
    "console",
] }
js-sys.workspace = true
console_error_panic_hook.workspace = true

# Error handling
thiserror.workspace = true

# UUID - for parsing only. Do NOT call Uuid::new_v4() here; use canvas-core for generation.
uuid.workspace = true
