[package]
name = "canvas-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

description = "Core canvas logic for Saorsa Canvas - scene graph, state management, input handling. Compiles to WASM for universal portability."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
# uuid/js enables crypto.getRandomValues() for UUID generation in browsers
wasm = ["wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook", "uuid/js"]

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# UUID for element IDs
uuid.workspace = true

# WASM (optional)
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
