[package]
name = "canvas-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
publish = false

description = "Native desktop host for Saorsa Canvas using winit + wgpu."

[[bin]]
name = "canvas-desktop"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
canvas-core = { path = "../canvas-core", version = "0.1.4" }
canvas-renderer = { path = "../canvas-renderer", version = "0.1.4", features = ["gpu"] }
pollster = "0.4"
winit.workspace = true
wgpu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
clap.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
url.workspace = true
thiserror.workspace = true
serde.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
