[package]
name = "canvas-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

description = "Custom minimal renderer for Saorsa Canvas built on wgpu. Provides GPU rendering with WebGL2/2D fallbacks."

[features]
default = ["gpu", "charts", "images"]
gpu = ["wgpu"]
wasm = ["wasm-bindgen", "web-sys", "js-sys"]
charts = ["plotters"]
images = ["image"]
export = ["resvg", "usvg", "tiny-skia", "printpdf", "image"]

[dependencies]
# Core canvas types
canvas-core = { path = "../canvas-core", version = "0.2.0" }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Graphics
wgpu = { workspace = true, optional = true }
bytemuck = { version = "1.21", features = ["derive"] }
pollster = "0.4"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# Windowing (for native targets)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit.workspace = true

# WASM (optional)
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

# Charts (optional, not available for WASM)
plotters = { workspace = true, optional = true }

# Image processing (optional, not available for WASM)
image = { workspace = true, optional = true }

# Base64 encoding for data URIs
base64.workspace = true

# Export (optional)
resvg = { version = "0.44", optional = true }
usvg = { version = "0.44", optional = true }
tiny-skia = { version = "0.11", optional = true }
printpdf = { version = "0.7", optional = true, features = ["embedded_images"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
