[package]
name = "canvas-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
include = ["src/**/*", "web/**/*", "Cargo.toml"]

description = "Local embedded Axum server for Saorsa Canvas. Serves the PWA and handles WebRTC signaling."

[lib]
name = "canvas_server"
path = "src/lib.rs"

[[bin]]
name = "saorsa-canvas"
path = "src/main.rs"

[dependencies]
# Core crates
canvas-core = { path = "../canvas-core", version = "0.1.3" }
canvas-renderer = { path = "../canvas-renderer", version = "0.1.3" }
canvas-mcp = { path = "../canvas-mcp", version = "0.1.3" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Web server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# UUID
uuid.workspace = true

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
wiremock = "0.6"
tokio-tungstenite = "0.24"
futures-util = "0.3"
portpicker = "0.1"
proptest = "1.4"
